style/main.css
body {
  background-color: #000814;
  padding: 0;
  margin:  0;
}
h1 {
  font-size:  5vw;
  font-family: "Audiowide", sans-serif;
  font-weight: lighter;
  padding-bottom: .3em;
  border-bottom: 2px solid #f2777a;
  text-align: center;
  color: #ffffff;
}
.navi .active {
  border-bottom: 2px solid #ffffff;
}
.navi ul {
  list-style-type: none;
  background-color: #021533;
  padding: 0;
  margin:  0;
  overflow: hidden;
  text-align: left;
}
.navi li .navButton {
  text-decoration: none;
  color:  #ffffff;
  margin: 0;
  padding: 10px;
  font-family: "Roboto", sans-serif;
  float: left;
}
.navi li .navRight {
  float:  right;
}
.navi li .navButton:hover, .navi li .navButton:active {
  border-bottom: 2px solid #fff;
  animation:  pulse 1s;
  animation-fill-mode: forwards;
  -webkit-animation-fill-mode: forwards;
  -moz-animation-fill-mode: forwards;
}
.navi .navImage {
  -webkit-filter: invert(100%);
  filter: invert(100%);
  float:  left;
  padding:  10px 15px;
}
.navi .imageActive  {
  border-bottom: 2px solid #000;
}
.navi .navImage:hover {
    border-bottom: 2px solid #fff;
    animation: pulse2 1s;
    animation-fill-mode: forwards;
  -webkit-animation-fill-mode: forwards;
  -moz-animation-fill-mode: forwards;
}
p {
  text-align: center;
  font-family: "Roboto", sans-serif;
  color: #ffffff;
  font-size: 2vw;
}
@keyframes pulse2 {
  0% {
    color:  #ffffff;
    -webkit-filter: invert(100%);
  filter: invert(100%); 
  }
  100% {
    color: #021533;
    -webkit-filter: invert(0%);
  filter: invert(0%);
    border-bottom: 2px solid #ff0000;
    background-color: #ffffff;
  }
}
@keyframes pulse {
  0% {
    color:  #ffffff; 
  }
  100% {
    color: #021533;
    border-bottom: 2px solid #ff0000;
    background-color: #ffffff;
  }
}
@media (max-width: 600px) {
  h1 {
    font-size:  7.5vw;
    font-family: "Roboto","Audiowide", sans-serif;
  }
  p {
    font-size: 5vw;
  }
  .navi li .navButton {
    width: 100%;
    text-align: center;
    float: right;
  }
  .navi li .navImage {
    width: 100%;
    text-align: center;
    float: right;
  }
}

